service/test/ingress-setting.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: service-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/enable-cors: "false"
spec:
  rules:
  - http:
      paths:
      - path: /log
        pathType: Prefix
        backend:
          service:
            name: log-service.service.svc.cluster.local
            port: 
              number: 80
