service/test/log-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: log-service
spec:
  selector:
    app: log
  ports: 
  - port: 80
    targetPort: 8006
